--- a/src/main/resources/templates/enter.html
+++ b/src/main/resources/templates/enter.html
@@ -6,12 +6,14 @@
   <title>Chat App</title>
 </head>
 <body>
-<p th:text="${error}">check</p>
-<h1>Enter</h1>
+<div class="centered">
+<p th:text="${error}">error</p>
+<h1 class="header">Enter</h1>
 <form method="post" action="/enter/add">
-  <input th:type="text" name="userName"/>
-  <input th:type="submit" value="ENTER"/>
+  <input class="input1" th:type="text" name="userName"/>
+  <input class="input2" th:type="submit" value="ENTER"/>
 </form>
-
+</div>
+<img class="image" src="../SABERS2small.png" height="300" width="300"/>
 </body>
 </html>
