javascript added, and its name from now on is script

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta http-equiv="refresh" content="5" />
   <link th:href="@{main.css}" rel="stylesheet" type="text/css"/>
   <title>Chat App</title>
 </head>
@@ -30,5 +31,6 @@
   <td class="action" th:text="${entry.userName}">3</td>
   </div>
 </tr>
+<script src="../static/script.js"></script>
 </body>
 </html>
