--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
 </div>
 <tr th:each="entry : ${messageRepo}">
   <div>
-  <td class="id" th:text="${entry.id}">1</td>
+  <td class="id" th:text="${entry.timestamp}">1</td>
   <td class="action" th:text="${entry.message}">2</td>
   <td class="action" th:text="${entry.userName}">3</td>
   </div>
