try to solve duplication error

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,6 +31,6 @@
   <td class="action" th:text="${entry.userName}">3</td>
   </div>
 </tr>
-<script src="../static/script.js"></script>
+<!--<script src="../static/script.js"></script>-->
 </body>
 </html>
